<resources>
    <string name="app_name">Yoga Community</string>
    <string name="title_tv">TITLE</string>
    <string name="play">PLAY</string>
    <string name="Beginner">Beginner</string>
    <string name="WeightLoss">Express</string>
    <string name="Start">Start</string>
    <string name="Next">Next</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="timer_initial">00:00</string>
    <string name="finish">FINISH</string>
    <string name="exerciseNumber">1/3</string>
    <string name="Yes">Yes</string>
    <string name="quit">Quit Workout?</string>
    <string name="no">No, I got what it takes</string>
    <string name="img_desc">Various Poses</string>
    <string name="watch">Watch</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="logout">LogOut</string>
</resources>
